--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
       <artifactId>guava</artifactId>
       <version>33.4.8-jre</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.12.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
